4M/compiler/generated/FormalSpecParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 compiler/grammar/FormalSpec.g 2011-10-07 09:31:58

package compiler.generated;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**
 *	Formal Specification Language grammar 
 *	@author Everett Morse
 *	(c) 2009 - 2010 Brigham Young University
 */
public class FormalSpecParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROC", "FUNC", "UMINUS", "VAR", "SET_BUILDER", "SLIST", "PLIST", "KLIST", "KGUARD", "DESET", "RET", "SETMINUS", "UNION", "INTERSECT", "FORALL", "EXISTS", "IN", "NOTIN", "AND", "OR", "NUMBER", "STRING", "BOOLEAN", "ID", "ID_CHAR", "DIGIT", "COMMENT", "WS", "'state'", "'end'", "'='", "'transition'", "'daemon'", "'input'", "'rule'", "'errors'", "'==>'", "'let'", "'procedure'", "'('", "')'", "'function'", "','", "';'", "'tmp'", "'call'", "'choose'", "'in'", "'@'", "'\\''", "':='", "'['", "']'", "'{'", "'}'", "'truncate'", "'\\\\/'", "'/\\\\'", "'\\\\in'", "'\\\\notin'", "'\\\\'", "'\\\\int'", "'\\\\U'", "'\\\\E'", "'\\\\A'", "'>'", "'<'", "'>='", "'<='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", "'typeof'", "'.'", "'|'", "'if'", "'then'", "'else'", "'fi'", "':'", "'ERROR'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int PLIST=10;
    public static final int T__63=63;
    public static final int ID_CHAR=28;
    public static final int KLIST=11;
    public static final int KGUARD=12;
    public static final int ID=27;
    public static final int AND=22;
    public static final int T__61=61;
    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int SET_BUILDER=8;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int RET=14;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int BOOLEAN=26;
    public static final int T__51=51;
    public static final int IN=20;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__59=59;
    public static final int DESET=13;
    public static final int PROC=4;
    public static final int SLIST=9;
    public static final int VAR=7;
    public static final int DIGIT=29;
    public static final int EXISTS=19;
    public static final int COMMENT=30;
    public static final int SETMINUS=15;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__80=80;
    public static final int T__46=46;
    public static final int T__81=81;
    public static final int T__47=47;
    public static final int T__82=82;
    public static final int T__44=44;
    public static final int T__83=83;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=24;
    public static final int FORALL=18;
    public static final int UMINUS=6;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int UNION=16;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int INTERSECT=17;
    public static final int T__32=32;
    public static final int WS=31;
    public static final int T__33=33;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__70=70;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int FUNC=5;
    public static final int OR=23;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int STRING=25;
    public static final int T__78=78;
    public static final int NOTIN=21;
    public static final int T__77=77;

    // delegates
    // delegators


        public FormalSpecParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FormalSpecParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[138+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FormalSpecParser.tokenNames; }
    public String getGrammarFileName() { return "compiler/grammar/FormalSpec.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // compiler/grammar/FormalSpec.g:61:1: program : ( transition | daemon | function | procedure | state )* ;
    public final FormalSpecParser.program_return program() throws RecognitionException {
        FormalSpecParser.program_return retval = new FormalSpecParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        Object root_0 = null;

        FormalSpecParser.transition_return transition1 = null;

        FormalSpecParser.daemon_return daemon2 = null;

        FormalSpecParser.function_return function3 = null;

        FormalSpecParser.procedure_return procedure4 = null;

        FormalSpecParser.state_return state5 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // compiler/grammar/FormalSpec.g:62:2: ( ( transition | daemon | function | procedure | state )* )
            // compiler/grammar/FormalSpec.g:62:4: ( transition | daemon | function | procedure | state )*
            {
            root_0 = (Object)adaptor.nil();

            // compiler/grammar/FormalSpec.g:62:4: ( transition | daemon | function | procedure | state )*
            loop1:
            do {
                int alt1=6;
                switch ( input.LA(1) ) {
                case 35:
                    {
                    alt1=1;
                    }
                    break;
                case 36:
                    {
                    alt1=2;
                    }
                    break;
                case 45:
                    {
                    alt1=3;
                    }
                    break;
                case 42:
                    {
                    alt1=4;
                    }
                    break;
                case 32:
                    {
                    alt1=5;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // compiler/grammar/FormalSpec.g:62:5: transition
            	    {
            	    pushFollow(FOLLOW_transition_in_program212);
            	    transition1=transition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, transition1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // compiler/grammar/FormalSpec.g:62:18: daemon
            	    {
            	    pushFollow(FOLLOW_daemon_in_program216);
            	    daemon2=daemon();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, daemon2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // compiler/grammar/FormalSpec.g:62:27: function
            	    {
            	    pushFollow(FOLLOW_function_in_program220);
            	    function3=function();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, function3.getTree());

            	    }
            	    break;
            	case 4 :
            	    // compiler/grammar/FormalSpec.g:62:38: procedure
            	    {
            	    pushFollow(FOLLOW_procedure_in_program224);
            	    procedure4=procedure();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, procedure4.getTree());

            	    }
            	    break;
            	case 5 :
            	    // compiler/grammar/FormalSpec.g:62:50: state
            	    {
            	    pushFollow(FOLLOW_state_in_program228);
            	    state5=state();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, state5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class state_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "state"
    // compiler/grammar/FormalSpec.g:65:1: state : 'state' ( state_variable_decl )* 'end' ;
    public final FormalSpecParser.state_return state() throws RecognitionException {
        FormalSpecParser.state_return retval = new FormalSpecParser.state_return();
        retval.start = input.LT(1);
        int state_StartIndex = input.index();
        Object root_0 = null;

        Token string_literal6=null;
        Token string_literal8=null;
        FormalSpecParser.state_variable_decl_return state_variable_decl7 = null;


        Object string_literal6_tree=null;
        Object string_literal8_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // compiler/grammar/FormalSpec.g:66:2: ( 'state' ( state_variable_decl )* 'end' )
            // compiler/grammar/FormalSpec.g:66:4: 'state' ( state_variable_decl )* 'end'
            {
            root_0 = (Object)adaptor.nil();

            string_literal6=(Token)match(input,32,FOLLOW_32_in_state243); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal6_tree = (Object)adaptor.create(string_literal6);
            root_0 = (Object)adaptor.becomeRoot(string_literal6_tree, root_0);
            }
            // compiler/grammar/FormalSpec.g:66:13: ( state_variable_decl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // compiler/grammar/FormalSpec.g:0:0: state_variable_decl
            	    {
            	    pushFollow(FOLLOW_state_variable_decl_in_state246);
            	    state_variable_decl7=state_variable_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, state_variable_decl7.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            string_literal8=(Token)match(input,33,FOLLOW_33_in_state249); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, state_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "state"

    public static class state_variable_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "state_variable_decl"
    // compiler/grammar/FormalSpec.g:68:1: state_variable_decl : id ( '=' expression )? -> ^( VAR id ( expression )? ) ;
    public final FormalSpecParser.state_variable_decl_return state_variable_decl() throws RecognitionException {
        FormalSpecParser.state_variable_decl_return retval = new FormalSpecParser.state_variable_decl_return();
        retval.start = input.LT(1);
        int state_variable_decl_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal10=null;
        FormalSpecParser.id_return id9 = null;

        FormalSpecParser.expression_return expression11 = null;


        Object char_literal10_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // compiler/grammar/FormalSpec.g:69:2: ( id ( '=' expression )? -> ^( VAR id ( expression )? ) )
            // compiler/grammar/FormalSpec.g:69:4: id ( '=' expression )?
            {
            pushFollow(FOLLOW_id_in_state_variable_decl261);
            id9=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_id.add(id9.getTree());
            // compiler/grammar/FormalSpec.g:69:7: ( '=' expression )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==34) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // compiler/grammar/FormalSpec.g:69:8: '=' expression
                    {
                    char_literal10=(Token)match(input,34,FOLLOW_34_in_state_variable_decl264); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal10);

                    pushFollow(FOLLOW_expression_in_state_variable_decl266);
                    expression11=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expression.add(expression11.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: id, expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 69:25: -> ^( VAR id ( expression )? )
            {
                // compiler/grammar/FormalSpec.g:69:28: ^( VAR id ( expression )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);

                adaptor.addChild(root_1, stream_id.nextTree());
                // compiler/grammar/FormalSpec.g:69:37: ( expression )?
                if ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_1, stream_expression.nextTree());

                }
                stream_expression.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, state_variable_decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "state_variable_decl"

    public static class transition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "transition"
    // compiler/grammar/FormalSpec.g:72:1: transition : 'transition' id ( input_list )? ( let_decl )* success_rule ( error_rules )? 'end' ;
    public final FormalSpecParser.transition_return transition() throws RecognitionException {
        FormalSpecParser.transition_return retval = new FormalSpecParser.transition_return();
        retval.start = input.LT(1);
        int transition_StartIndex = input.index();
        Object root_0 = null;

        Token string_literal12=null;
        Token string_literal18=null;
        FormalSpecParser.id_return id13 = null;

        FormalSpecParser.input_list_return input_list14 = null;

        FormalSpecParser.let_decl_return let_decl15 = null;

        FormalSpecParser.success_rule_return success_rule16 = null;

        FormalSpecParser.error_rules_return error_rules17 = null;


        Object string_literal12_tree=null;
        Object string_literal18_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // compiler/grammar/FormalSpec.g:73:2: ( 'transition' id ( input_list )? ( let_decl )* success_rule ( error_rules )? 'end' )
            // compiler/grammar/FormalSpec.g:73:4: 'transition' id ( input_list )? ( let_decl )* success_rule ( error_rules )? 'end'
            {
            root_0 = (Object)adaptor.nil();

            string_literal12=(Token)match(input,35,FOLLOW_35_in_transition292); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal12_tree = (Object)adaptor.create(string_literal12);
            root_0 = (Object)adaptor.becomeRoot(string_literal12_tree, root_0);
            }
            pushFollow(FOLLOW_id_in_transition295);
            id13=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, id13.getTree());
            // compiler/grammar/FormalSpec.g:73:21: ( input_list )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==37) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // compiler/grammar/FormalSpec.g:73:22: input_list
                    {
                    pushFollow(FOLLOW_input_list_in_transition298);
                    input_list14=input_list();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, input_list14.getTree());

                    }
                    break;

            }

            // compiler/grammar/FormalSpec.g:73:35: ( let_decl )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==41) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // compiler/grammar/FormalSpec.g:0:0: let_decl
            	    {
            	    pushFollow(FOLLOW_let_decl_in_transition302);
            	    let_decl15=let_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, let_decl15.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            pushFollow(FOLLOW_success_rule_in_transition305);
            success_rule16=success_rule();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, success_rule16.getTree());
            // compiler/grammar/FormalSpec.g:73:58: ( error_rules )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==39) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // compiler/grammar/FormalSpec.g:0:0: error_rules
                    {
                    pushFollow(FOLLOW_error_rules_in_transition307);
                    error_rules17=error_rules();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, error_rules17.getTree());

                    }
                    break;

            }

            string_literal18=(Token)match(input,33,FOLLOW_33_in_transition310); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, transition_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "transition"

    public static class daemon_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "daemon"
    // compiler/grammar/FormalSpec.g:75:1: daemon : 'daemon' id ( let_decl )* success_rule ( error_rules )? 'end' ;
    public final FormalSpecParser.daemon_return daemon() throws RecognitionException {
        FormalSpecParser.daemon_return retval = new FormalSpecParser.daemon_return();
        retval.start = input.LT(1);
        int daemon_StartIndex = input.index();
        Object root_0 = null;

        Token string_literal19=null;
        Token string_literal24=null;
        FormalSpecParser.id_return id20 = null;

        FormalSpecParser.let_decl_return let_decl21 = null;

        FormalSpecParser.success_rule_return success_rule22 = null;

        FormalSpecParser.error_rules_return error_rules23 = null;


        Object string_literal19_tree=null;
        Object string_literal24_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // compiler/grammar/FormalSpec.g:76:2: ( 'daemon' id ( let_decl )* success_rule ( error_rules )? 'end' )
            // compiler/grammar/FormalSpec.g:76:4: 'daemon' id ( let_decl )* success_rule ( error_rules )? 'end'
            {
            root_0 = (Object)adaptor.nil();

            string_literal19=(Token)match(input,36,FOLLOW_36_in_daemon321); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal19_tree = (Object)adaptor.create(string_literal19);
            root_0 = (Object)adaptor.becomeRoot(string_literal19_tree, root_0);
            }
            pushFollow(FOLLOW_id_in_daemon324);
            id20=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, id20.getTree());
            // compiler/grammar/FormalSpec.g:76:17: ( let_decl )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==41) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // compiler/grammar/FormalSpec.g:0:0: let_decl
            	    {
            	    pushFollow(FOLLOW_let_decl_in_daemon326);
            	    let_decl21=let_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, let_decl21.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            pushFollow(FOLLOW_success_rule_in_daemon329);
            success_rule22=success_rule();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, success_rule22.getTree());
            // compiler/grammar/FormalSpec.g:76:40: ( error_rules )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==39) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // compiler/grammar/FormalSpec.g:0:0: error_rules
                    {
                    pushFollow(FOLLOW_error_rules_in_daemon331);
                    error_rules23=error_rules();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, error_rules23.getTree());

                    }
                    break;

            }

            string_literal24=(Token)match(input,33,FOLLOW_33_in_daemon334); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, daemon_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "daemon"

    public static class input_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
